# ledger-app-minter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  deploy.sh  make_dist.sh
com/: CMakeLists.txt  conanfile.txt
com/include/: hid_config.h
com/libs/hid/: CMakeLists.txt
com/libs/hid/linux/: hid.c
com/modules/: ConanBuild.cmake
com/src/: hid.cpp  hid.h  hid_dev.cpp  hid_dev.h  hid_dev_info.cpp  hid_dev_info.h  hid_frame.cpp  hid_frame.h  hid_frame_apdu.cpp  hid_frame_apdu.h  main.cpp
modules/: ledger_common.cmake  utils.cmake
src/: calcTxnHash.c  getAddress.c  getPrivateKey.c  getPublicKey.c  getVersion.c  glyphs.c  glyphs.h  main.c  minter.c  minter.h  signHash.c  txn.c  ux.h
